# DNG_BetaBinomial_Paired

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  README.txt
cmake/modules/: .RData  CMakeLists.txt  FindR.cmake  FindSamtools.cmake
src/: AlphaBeta.cc  BBPaired.cc  BBPaired.h  CMakeLists.txt  DNGCaller.cc  DNGCaller.h  bcf2Paired.cc  callDNGBB.sh  denovogear.cc  denovogear.h  makeLookup.cc  pairLike.cc  parser.h  rinside.BBFit.cc  snpLike.cc
src/samtools-0.1.18/: Makefile  bam_plcmd.c
src/utils/: CMakeLists.txt
